Correction for a bug with more than 2 creatures in the code